--- a/nx/myworkspace/libs/ui/src/lib/my-button/my-button.component.html
+++ b/nx/myworkspace/libs/ui/src/lib/my-button/my-button.component.html
@@ -1,3 +1,3 @@
 <div class="my-button">
-  <button class=my-button__button>{{ text }}</button>
+  <button class=my-button__button [disabled]="disabled">{{ text }}</button>
 </div>
