--- a/nx/myworkspace/libs/ui/src/lib/my-button/my-button.component.scss
+++ b/nx/myworkspace/libs/ui/src/lib/my-button/my-button.component.scss
@@ -1,6 +1,6 @@
 .my-button {
     &__button {
-        background: rgba(48, 63, 159, 0.12);
+        background: none;
         border-radius: 4px 4px 4px 4px;
         height: 36px;
         padding: 0 8px;
@@ -17,5 +17,19 @@
         // width: 64px;
         border: none;
         outline: none;
+
+        &:hover {
+            background: rgba(48, 63, 159, 0.04);
+        }
+        &:focus {
+            background: rgba(48, 63, 159, 0.12);
+        }
+        &:active {
+            background: rgba(48, 63, 159, 0.16);
+        }
+        &:disabled {
+            color: rgba(255, 255, 255, 0.38);
+            background: none;
+        }
     }
 }
